--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,43 @@ i {
   align-items: center;
 }
 
+
+.modal-container {
+  position: absolute;
+    left: 50%;
+    top: 50%;
+    /* bottom: 2.5rem; */
+    background-color: #fff;
+    box-shadow: 0 0 10px 0 rgba(0,0,97,0.5);
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    transform: translate(-50%, -50%);
+    padding: 50px;
+}
+
+.modal-overlay {
+  z-index: 99;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(255,255,255,0.75);
+}
+
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.modal-button  {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+}
+
 .pagination {
   justify-content: center;
   align-items: center;
